[tool.poetry]
name = "onecontainer-api"
version = "0.1.0"
description = "System Stacks Service API"
license = "Apache2.0"
homepage = "https://gitlab.devtools.intel.com/verticals/onecontainer-api.git"
repository = "https://gitlab.devtools.intel.com/verticals/onecontainer-api.git"
keywords = ["api", "onecontainer-api", "onecontainer_api"]
authors = ["runnikri <rahul.unnikrishnan.nair@intel.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.60.0"
sqlalchemy = "1.3.18"
databases = {extras = ["sqlite"], version = "^0.3.2"}
python-dotenv = "^0.14.0"
docker = "^4.3.1"
loguru = "^0.5.3"
python-multipart = "^0.0.5"
aiocache = "^0.11.1"
ujson = "^5.1.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^6.0.1"
requests = "^2.24.0"
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
oca = "onecontainer_api.main:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
